@@ -70,8 +70,10 @@ import com.skapp.community.peopleplanner.payload.request.employee.EmployeeSystem
 import com.skapp.community.peopleplanner.payload.request.employee.emergency.EmployeeEmergencyContactDetailsDto;
 import com.skapp.community.peopleplanner.payload.request.employee.employment.EmployeeEmploymentBasicDetailsDto;
 import com.skapp.community.peopleplanner.payload.request.employee.employment.EmployeeEmploymentBasicDetailsManagerDetailsDto;
+import com.skapp.community.peopleplanner.payload.request.employee.employment.EmployeeEmploymentCareerProgressionDetailsDto;
 import com.skapp.community.peopleplanner.payload.request.employee.employment.EmployeeEmploymentIdentificationAndDiversityDetailsDto;
 import com.skapp.community.peopleplanner.payload.request.employee.employment.EmployeeEmploymentPreviousEmploymentDetailsDto;
+import com.skapp.community.peopleplanner.payload.request.employee.employment.EmployeeEmploymentVisaDetailsDto;
 import com.skapp.community.peopleplanner.payload.request.employee.personal.EmployeeExtraInfoDto;
 import com.skapp.community.peopleplanner.payload.request.employee.personal.EmployeePersonalContactDetailsDto;
 import com.skapp.community.peopleplanner.payload.request.employee.personal.EmployeePersonalEducationalDetailsDto;
@@ -95,9 +97,13 @@ import com.skapp.community.peopleplanner.payload.response.EmployeePeriodResponse
 import com.skapp.community.peopleplanner.payload.response.EmployeeTeamDto;
 import com.skapp.community.peopleplanner.payload.response.PrimarySecondaryOrTeamSupervisorResponseDto;
 import com.skapp.community.peopleplanner.repository.EmployeeDao;
+import com.skapp.community.peopleplanner.repository.EmployeeEducationDao;
+import com.skapp.community.peopleplanner.repository.EmployeeFamilyDao;
 import com.skapp.community.peopleplanner.repository.EmployeeManagerDao;
 import com.skapp.community.peopleplanner.repository.EmployeePeriodDao;
+import com.skapp.community.peopleplanner.repository.EmployeeProgressionDao;
 import com.skapp.community.peopleplanner.repository.EmployeeTeamDao;
+import com.skapp.community.peopleplanner.repository.EmployeeVisaDao;
 import com.skapp.community.peopleplanner.repository.JobFamilyDao;
 import com.skapp.community.peopleplanner.repository.JobTitleDao;
 import com.skapp.community.peopleplanner.repository.TeamDao;
@@ -201,6 +207,14 @@ public class PeopleServiceImpl implements PeopleService {
 	private final UserVersionService userVersionService;
 
 	private final EmployeeValidationService employeeValidationService;
+
+	private final EmployeeFamilyDao employeeFamilyDao;
+
+	private final EmployeeEducationDao employeeEducationDao;
+
+	private final EmployeeProgressionDao employeeProgressionDao;
+
+	private final EmployeeVisaDao employeeVisaDao;
 
 	@Value("${encryptDecryptAlgorithm.secret}")
 	private String encryptSecret;
@@ -476,6 +490,44 @@ public class PeopleServiceImpl implements PeopleService {
 			return new ArrayList<>();
 		}
 
+		if (personal.getFamily().isEmpty()) {
+			if (employee.getEmployeeFamilies() != null && !employee.getEmployeeFamilies().isEmpty()) {
+				List<Long> familyIds = employee.getEmployeeFamilies()
+					.stream()
+					.map(EmployeeFamily::getFamilyId)
+					.filter(Objects::nonNull)
+					.toList();
+
+				if (!familyIds.isEmpty()) {
+					employeeFamilyDao.deleteAllByFamilyIdIn(familyIds);
+					employee.getEmployeeFamilies().clear();
+				}
+			}
+			return new ArrayList<>();
+		}
+
+		Set<Long> requestFamilyIds = personal.getFamily()
+			.stream()
+			.map(EmployeePersonalFamilyDetailsDto::getFamilyId)
+			.filter(Objects::nonNull)
+			.collect(Collectors.toSet());
+
+		if (employee.getEmployeeId() != null && employee.getEmployeeFamilies() != null
+				&& !employee.getEmployeeFamilies().isEmpty()) {
+			List<Long> familiesToRemove = employee.getEmployeeFamilies()
+				.stream()
+				.map(EmployeeFamily::getFamilyId)
+				.filter(id -> id != null && !requestFamilyIds.contains(id))
+				.toList();
+
+			if (!familiesToRemove.isEmpty()) {
+				employeeFamilyDao.deleteAllByFamilyIdIn(familiesToRemove);
+				employee.getEmployeeFamilies()
+					.removeIf(
+							family -> family.getFamilyId() != null && familiesToRemove.contains(family.getFamilyId()));
+			}
+		}
+
 		List<EmployeeFamily> existingFamilies = employee.getEmployeeFamilies() != null
 				? new ArrayList<>(employee.getEmployeeFamilies()) : new ArrayList<>();
 
@@ -501,7 +553,6 @@ public class PeopleServiceImpl implements PeopleService {
 			result.add(family);
 		}
 
-		result.addAll(existingFamilyMap.values());
 		return result;
 	}
 
@@ -510,7 +561,45 @@ public class PeopleServiceImpl implements PeopleService {
 			.safeGet(() -> requestDto.getPersonal().getEducational());
 
 		if (educationalDtos == null || employee == null) {
+			return employee != null && employee.getEmployeeEducations() != null
+					? new ArrayList<>(employee.getEmployeeEducations()) : new ArrayList<>();
+		}
+
+		if (educationalDtos.isEmpty()) {
+			if (employee.getEmployeeEducations() != null && !employee.getEmployeeEducations().isEmpty()) {
+				List<Long> educationIds = employee.getEmployeeEducations()
+					.stream()
+					.map(EmployeeEducation::getEducationId)
+					.filter(Objects::nonNull)
+					.toList();
+
+				if (!educationIds.isEmpty()) {
+					employeeEducationDao.deleteAllByEducationIdIn(educationIds);
+					employee.getEmployeeEducations().clear();
+				}
+			}
 			return new ArrayList<>();
+		}
+
+		if (employee.getEmployeeId() != null && employee.getEmployeeEducations() != null
+				&& !employee.getEmployeeEducations().isEmpty()) {
+			Set<Long> requestEducationIds = educationalDtos.stream()
+				.map(EmployeePersonalEducationalDetailsDto::getEducationId)
+				.filter(Objects::nonNull)
+				.collect(Collectors.toSet());
+
+			List<Long> educationsToRemove = employee.getEmployeeEducations()
+				.stream()
+				.map(EmployeeEducation::getEducationId)
+				.filter(id -> id != null && !requestEducationIds.contains(id))
+				.toList();
+
+			if (!educationsToRemove.isEmpty()) {
+				employeeEducationDao.deleteAllByEducationIdIn(educationsToRemove);
+				employee.getEmployeeEducations()
+					.removeIf(education -> education.getEducationId() != null
+							&& educationsToRemove.contains(education.getEducationId()));
+			}
 		}
 
 		List<EmployeeEducation> existingEducations = employee.getEmployeeEducations() != null
@@ -536,18 +625,53 @@ public class PeopleServiceImpl implements PeopleService {
 			result.add(education);
 		}
 
-		result.addAll(existingEducationMap.values());
 		return result;
 	}
 
 	private Set<EmployeeTeam> processEmployeeTeams(EmployeeEmploymentDetailsDto requestDto, Employee employee) {
 		if (requestDto == null || requestDto.getEmploymentDetails() == null || employee == null) {
-			return new HashSet<>();
+			return employee != null && employee.getEmployeeTeams() != null ? employee.getEmployeeTeams()
+					: new HashSet<>();
 		}
 
 		Long[] teamIds = requestDto.getEmploymentDetails().getTeamIds();
-		if (teamIds == null || teamIds.length == 0) {
+		if (teamIds != null && teamIds.length == 0) {
+			if (employee.getEmployeeTeams() != null && !employee.getEmployeeTeams().isEmpty()) {
+				List<Long> employeeTeamIds = employee.getEmployeeTeams()
+					.stream()
+					.map(EmployeeTeam::getId)
+					.filter(Objects::nonNull)
+					.toList();
+
+				if (!employeeTeamIds.isEmpty()) {
+					employeeTeamDao.deleteAllByIdIn(employeeTeamIds);
+				}
+
+				employee.getEmployeeTeams().clear();
+			}
 			return new HashSet<>();
+		}
+
+		if (teamIds == null) {
+			return employee.getEmployeeTeams() != null ? employee.getEmployeeTeams() : new HashSet<>();
+		}
+
+		if (employee.getEmployeeId() != null && employee.getEmployeeTeams() != null
+				&& !employee.getEmployeeTeams().isEmpty()) {
+			Set<Long> requestTeamIds = Arrays.stream(teamIds).collect(Collectors.toSet());
+
+			List<Long> teamsToRemove = employee.getEmployeeTeams()
+				.stream()
+				.filter(et -> et.getTeam() != null && !requestTeamIds.contains(et.getTeam().getTeamId()))
+				.map(EmployeeTeam::getId)
+				.filter(Objects::nonNull)
+				.toList();
+
+			if (!teamsToRemove.isEmpty()) {
+				employeeTeamDao.deleteAllByIdIn(teamsToRemove);
+				employee.getEmployeeTeams()
+					.removeIf(team -> team.getId() != null && teamsToRemove.contains(team.getId()));
+			}
 		}
 
 		Set<EmployeeTeam> existingTeams = employee.getEmployeeTeams() != null ? employee.getEmployeeTeams()
@@ -558,7 +682,7 @@ public class PeopleServiceImpl implements PeopleService {
 			.filter(Objects::nonNull)
 			.collect(Collectors.toSet());
 
-		Set<EmployeeTeam> result = Arrays.stream(teamIds).map(teamId -> {
+		return Arrays.stream(teamIds).map(teamId -> {
 			Team team = teamDao.findByTeamId(teamId);
 			EmployeeTeam employeeTeam = existingTeamIds.contains(teamId) ? existingTeams.stream()
 				.filter(et -> et.getTeam() != null && et.getTeam().getTeamId().equals(teamId))
@@ -571,14 +695,6 @@ public class PeopleServiceImpl implements PeopleService {
 
 			return employeeTeam;
 		}).collect(Collectors.toSet());
-
-		Set<Long> requestTeamIds = Arrays.stream(teamIds).collect(Collectors.toSet());
-
-		existingTeams.stream()
-			.filter(et -> et.getTeam() != null && !requestTeamIds.contains(et.getTeam().getTeamId()))
-			.forEach(result::add);
-
-		return result;
 	}
 
 	private Set<EmployeeManager> processEmployeeManagers(EmployeeEmploymentDetailsDto requestDto, Employee employee) {
@@ -595,43 +711,86 @@ public class PeopleServiceImpl implements PeopleService {
 				? new HashSet<>(employee.getEmployeeManagers()) : new HashSet<>();
 		Set<EmployeeManager> result = new HashSet<>();
 
-		if (primarySupervisor != null && primarySupervisor.getEmployeeId() != null) {
-			Employee manager = employeeDao.findEmployeeByEmployeeId(primarySupervisor.getEmployeeId());
-			if (manager != null) {
-				EmployeeManager primary = existingManagers.stream()
-					.filter(em -> em.getManager() != null
-							&& em.getManager().getEmployeeId().equals(primarySupervisor.getEmployeeId())
-							&& em.getManagerType() == ManagerType.PRIMARY)
-					.findFirst()
-					.orElse(new EmployeeManager());
+		boolean isPrimarySupervisorInRequest = requestDto.getEmploymentDetails().getPrimarySupervisor() != null;
+		boolean isSecondarySupervisorInRequest = requestDto.getEmploymentDetails().getSecondarySupervisor() != null;
 
-				CommonModuleUtils.setIfExists(() -> manager, primary::setManager);
-				CommonModuleUtils.setIfExists(() -> employee, primary::setEmployee);
-				CommonModuleUtils.setIfExists(() -> ManagerType.PRIMARY, primary::setManagerType);
-				CommonModuleUtils.setIfExists(() -> true, primary::setIsPrimaryManager);
-				result.add(primary);
+		Set<Long> newManagerIds = new HashSet<>();
+
+		if (isPrimarySupervisorInRequest) {
+			if (primarySupervisor.getEmployeeId() != null) {
+				newManagerIds.add(primarySupervisor.getEmployeeId());
+				Employee manager = employeeDao.findEmployeeByEmployeeId(primarySupervisor.getEmployeeId());
+				if (manager != null) {
+					EmployeeManager primary = existingManagers.stream()
+						.filter(em -> em.getManager() != null
+								&& !em.getManager().getEmployeeId().equals(primarySupervisor.getEmployeeId())
+								&& em.getManagerType() == ManagerType.PRIMARY)
+						.findFirst()
+						.orElse(new EmployeeManager());
+
+					CommonModuleUtils.setIfExists(() -> manager, primary::setManager);
+					CommonModuleUtils.setIfExists(() -> employee, primary::setEmployee);
+					CommonModuleUtils.setIfExists(() -> ManagerType.PRIMARY, primary::setManagerType);
+					CommonModuleUtils.setIfExists(() -> true, primary::setIsPrimaryManager);
+					result.add(primary);
+				}
+			}
+			else {
+				existingManagers.stream()
+					.filter(em -> em.getManagerType() == ManagerType.PRIMARY)
+					.map(EmployeeManager::getId)
+					.filter(Objects::nonNull)
+					.toList()
+					.forEach(employeeManagerDao::deleteById);
 			}
 		}
-
-		if (secondarySupervisor != null && secondarySupervisor.getEmployeeId() != null && (primarySupervisor == null
-				|| !secondarySupervisor.getEmployeeId().equals(primarySupervisor.getEmployeeId()))) {
-			Employee manager = employeeDao.findEmployeeByEmployeeId(secondarySupervisor.getEmployeeId());
-			if (manager != null) {
-				EmployeeManager secondary = existingManagers.stream()
-					.filter(em -> em.getManager() != null
-							&& em.getManager().getEmployeeId().equals(secondarySupervisor.getEmployeeId())
-							&& em.getManagerType() == ManagerType.SECONDARY)
-					.findFirst()
-					.orElse(new EmployeeManager());
-				CommonModuleUtils.setIfExists(() -> manager, secondary::setManager);
-				CommonModuleUtils.setIfExists(() -> employee, secondary::setEmployee);
-				CommonModuleUtils.setIfExists(() -> ManagerType.SECONDARY, secondary::setManagerType);
-				CommonModuleUtils.setIfExists(() -> false, secondary::setIsPrimaryManager);
-				result.add(secondary);
-			}
+		else {
+			existingManagers.stream().filter(em -> em.getManagerType() == ManagerType.PRIMARY).forEach(result::add);
 		}
 
-		existingManagers.stream().filter(em -> !result.contains(em)).forEach(result::add);
+		if (isSecondarySupervisorInRequest) {
+			if (secondarySupervisor.getEmployeeId() != null
+					&& (primarySupervisor == null || primarySupervisor.getEmployeeId() == null
+							|| !secondarySupervisor.getEmployeeId().equals(primarySupervisor.getEmployeeId()))) {
+
+				newManagerIds.add(secondarySupervisor.getEmployeeId());
+				Employee manager = employeeDao.findEmployeeByEmployeeId(secondarySupervisor.getEmployeeId());
+				if (manager != null) {
+					EmployeeManager secondary = existingManagers.stream()
+						.filter(em -> em.getManager() != null
+								&& !em.getManager().getEmployeeId().equals(secondarySupervisor.getEmployeeId())
+								&& em.getManagerType() == ManagerType.SECONDARY)
+						.findFirst()
+						.orElse(new EmployeeManager());
+					CommonModuleUtils.setIfExists(() -> manager, secondary::setManager);
+					CommonModuleUtils.setIfExists(() -> employee, secondary::setEmployee);
+					CommonModuleUtils.setIfExists(() -> ManagerType.SECONDARY, secondary::setManagerType);
+					CommonModuleUtils.setIfExists(() -> false, secondary::setIsPrimaryManager);
+					result.add(secondary);
+				}
+			}
+			else {
+				existingManagers.stream()
+					.filter(em -> em.getManagerType() == ManagerType.SECONDARY)
+					.map(EmployeeManager::getId)
+					.filter(Objects::nonNull)
+					.toList()
+					.forEach(employeeManagerDao::deleteById);
+			}
+		}
+		else {
+			existingManagers.stream().filter(em -> em.getManagerType() == ManagerType.SECONDARY).forEach(result::add);
+		}
+
+		List<Long> managersToRemove = existingManagers.stream()
+			.filter(em -> em.getManager() != null && !newManagerIds.contains(em.getManager().getEmployeeId()))
+			.map(EmployeeManager::getId)
+			.filter(Objects::nonNull)
+			.toList();
+
+		if (!managersToRemove.isEmpty()) {
+			employeeManagerDao.deleteAllByIdIn(managersToRemove);
+		}
 
 		return result;
 	}
@@ -672,9 +831,7 @@ public class PeopleServiceImpl implements PeopleService {
 		existingContact.setIsPrimary(isPrimary);
 		CommonModuleUtils.setIfExists(emergencyDto::getName, existingContact::setName);
 		CommonModuleUtils.setIfExists(emergencyDto::getRelationship, existingContact::setEmergencyRelationship);
-		if (emergencyDto.getContactNo() != null && emergencyDto.getCountryCode() != null) {
-			existingContact.setContactNo(emergencyDto.getCountryCode() + emergencyDto.getContactNo());
-		}
+		CommonModuleUtils.setIfExists(emergencyDto::getContactNo, existingContact::setContactNo);
 
 		return existingContact;
 	}
@@ -682,7 +839,47 @@ public class PeopleServiceImpl implements PeopleService {
 	private List<EmployeeVisa> processEmployeeVisas(CreateEmployeeRequestDto requestDto, Employee employee) {
 		if (requestDto == null || requestDto.getEmployment() == null
 				|| requestDto.getEmployment().getVisaDetails() == null || employee == null) {
+			return employee != null && employee.getEmployeeVisas() != null ? employee.getEmployeeVisas()
+					: new ArrayList<>();
+		}
+
+		if (requestDto.getEmployment().getVisaDetails().isEmpty()) {
+			if (employee.getEmployeeVisas() != null && !employee.getEmployeeVisas().isEmpty()) {
+				List<Long> visaIds = employee.getEmployeeVisas()
+					.stream()
+					.map(EmployeeVisa::getVisaId)
+					.filter(Objects::nonNull)
+					.toList();
+
+				if (!visaIds.isEmpty()) {
+					employeeVisaDao.deleteAllByVisaIdIn(visaIds);
+				}
+
+				employee.getEmployeeVisas().clear();
+			}
 			return new ArrayList<>();
+		}
+
+		if (employee.getEmployeeId() != null && employee.getEmployeeVisas() != null
+				&& !employee.getEmployeeVisas().isEmpty()) {
+			Set<Long> requestVisaIds = requestDto.getEmployment()
+				.getVisaDetails()
+				.stream()
+				.map(EmployeeEmploymentVisaDetailsDto::getVisaId)
+				.filter(Objects::nonNull)
+				.collect(Collectors.toSet());
+
+			List<Long> visasToRemove = employee.getEmployeeVisas()
+				.stream()
+				.map(EmployeeVisa::getVisaId)
+				.filter(id -> id != null && !requestVisaIds.contains(id))
+				.toList();
+
+			if (!visasToRemove.isEmpty()) {
+				employeeVisaDao.deleteAllByVisaIdIn(visasToRemove);
+				employee.getEmployeeVisas()
+					.removeIf(visa -> visa.getVisaId() != null && visasToRemove.contains(visa.getVisaId()));
+			}
 		}
 
 		List<EmployeeVisa> existingVisas = employee.getEmployeeVisas() != null ? employee.getEmployeeVisas()
@@ -692,7 +889,7 @@ public class PeopleServiceImpl implements PeopleService {
 			.filter(visa -> visa.getVisaId() != null)
 			.collect(Collectors.toMap(EmployeeVisa::getVisaId, visa -> visa));
 
-		List<EmployeeVisa> result = requestDto.getEmployment().getVisaDetails().stream().map(dto -> {
+		return requestDto.getEmployment().getVisaDetails().stream().map(dto -> {
 			EmployeeVisa visa = existingVisaMap.containsKey(dto.getVisaId()) ? existingVisaMap.remove(dto.getVisaId())
 					: new EmployeeVisa();
 			visa.setEmployee(employee);
@@ -703,27 +900,43 @@ public class PeopleServiceImpl implements PeopleService {
 			CommonModuleUtils.setIfExists(dto::getExpiryDate, visa::setExpirationDate);
 
 			return visa;
-		}).collect(Collectors.toList());
-
-		result.addAll(existingVisaMap.values());
-		return result;
+		}).toList();
 	}
 
 	private Set<EmployeePeriod> processEmployeeProbationPeriod(CreateEmployeeRequestDto requestDto, Employee employee) {
-		Set<EmployeePeriod> existingPeriods = employee.getEmployeePeriods() != null ? employee.getEmployeePeriods()
-				: new HashSet<>();
-
-		Set<EmployeePeriod> result = new HashSet<>();
-
 		if (requestDto == null || requestDto.getEmployment() == null
-				|| requestDto.getEmployment().getEmploymentDetails() == null) {
-			return existingPeriods.stream().filter(EmployeePeriod::getIsActive).collect(Collectors.toSet());
+				|| requestDto.getEmployment().getEmploymentDetails() == null || employee == null) {
+			return employee != null && employee.getEmployeePeriods() != null ? employee.getEmployeePeriods()
+				.stream()
+				.filter(EmployeePeriod::getIsActive)
+				.collect(Collectors.toSet()) : new HashSet<>();
 		}
 
 		EmployeeEmploymentBasicDetailsDto employmentDetails = requestDto.getEmployment().getEmploymentDetails();
 
+		if (employmentDetails.getProbationStartDate() == null && employmentDetails.getProbationEndDate() == null) {
+			if (employee.getEmployeeId() != null && employee.getEmployeePeriods() != null
+					&& !employee.getEmployeePeriods().isEmpty()) {
+				List<Long> periodIds = employee.getEmployeePeriods()
+					.stream()
+					.map(EmployeePeriod::getId)
+					.filter(Objects::nonNull)
+					.toList();
+
+				if (!periodIds.isEmpty()) {
+					employeePeriodDao.deleteAllByIdIn(periodIds);
+				}
+
+				employee.getEmployeePeriods().clear();
+			}
+			return new HashSet<>();
+		}
+
+		Set<EmployeePeriod> existingPeriods = employee.getEmployeePeriods() != null ? employee.getEmployeePeriods()
+				: new HashSet<>();
+
 		EmployeePeriod period = existingPeriods.stream()
-			.filter(p -> p.getStartDate() != null && p.getEndDate() != null)
+			.filter(p -> p.getIsActive() != null && p.getIsActive())
 			.findFirst()
 			.orElse(new EmployeePeriod());
 
@@ -732,8 +945,8 @@ public class PeopleServiceImpl implements PeopleService {
 		CommonModuleUtils.setIfExists(() -> true, period::setIsActive);
 		CommonModuleUtils.setIfExists(() -> employee, period::setEmployee);
 
+		Set<EmployeePeriod> result = new HashSet<>();
 		result.add(period);
-		existingPeriods.stream().filter(existing -> !result.contains(existing)).forEach(result::add);
 
 		return result;
 	}
@@ -742,7 +955,53 @@ public class PeopleServiceImpl implements PeopleService {
 			Employee employee) {
 		if (requestDto == null || requestDto.getEmployment() == null
 				|| requestDto.getEmployment().getCareerProgression() == null || employee == null) {
+			return employee != null && employee.getEmployeeProgressions() != null ? employee.getEmployeeProgressions()
+					: new ArrayList<>();
+		}
+
+		if (requestDto.getEmployment().getCareerProgression().isEmpty()) {
+			if (employee.getEmployeeProgressions() != null && !employee.getEmployeeProgressions().isEmpty()) {
+				List<Long> progressionIds = employee.getEmployeeProgressions()
+					.stream()
+					.map(EmployeeProgression::getProgressionId)
+					.filter(Objects::nonNull)
+					.toList();
+
+				if (!progressionIds.isEmpty()) {
+					employeeProgressionDao.deleteAllByProgressionIdIn(progressionIds);
+				}
+
+				employee.getEmployeeProgressions().clear();
+
+				employee.setEmploymentType(null);
+				employee.setJobFamily(null);
+				employee.setJobTitle(null);
+			}
 			return new ArrayList<>();
+		}
+
+		if (employee.getEmployeeId() != null) {
+			Set<Long> requestProgressionIds = requestDto.getEmployment()
+				.getCareerProgression()
+				.stream()
+				.map(EmployeeEmploymentCareerProgressionDetailsDto::getProgressionId)
+				.filter(Objects::nonNull)
+				.collect(Collectors.toSet());
+
+			if (employee.getEmployeeProgressions() != null && !employee.getEmployeeProgressions().isEmpty()) {
+				List<Long> progressionsToRemove = employee.getEmployeeProgressions()
+					.stream()
+					.map(EmployeeProgression::getProgressionId)
+					.filter(id -> id != null && !requestProgressionIds.contains(id))
+					.toList();
+
+				if (!progressionsToRemove.isEmpty()) {
+					employeeProgressionDao.deleteAllByProgressionIdIn(progressionsToRemove);
+					employee.getEmployeeProgressions()
+						.removeIf(progression -> progression.getProgressionId() != null
+								&& progressionsToRemove.contains(progression.getProgressionId()));
+				}
+			}
 		}
 
 		List<EmployeeProgression> existingProgressions = employee.getEmployeeProgressions() != null
@@ -763,6 +1022,30 @@ public class PeopleServiceImpl implements PeopleService {
 			CommonModuleUtils.setIfExists(dto::getStartDate, progression::setStartDate);
 			CommonModuleUtils.setIfExists(dto::getEndDate, progression::setEndDate);
 			CommonModuleUtils.setIfExists(dto::getIsCurrentEmployment, progression::setIsCurrent);
+
+			if (progression.getProgressionId() != null) {
+				List<EmployeeProgression> employeeProgression = employee.getEmployeeProgressions()
+					.stream()
+					.filter(p -> p.getProgressionId().equals(progression.getProgressionId()))
+					.toList();
+
+				employeeProgression.forEach(empProgression -> {
+					if (Boolean.FALSE.equals(progression.getIsCurrent())) {
+						employee.setEmploymentType(null);
+						employee.setJobFamily(null);
+						employee.setJobTitle(null);
+					}
+
+					if (Boolean.TRUE.equals(progression.getIsCurrent())) {
+						CommonModuleUtils.setIfExists(empProgression::getEmploymentType, employee::setEmploymentType);
+						CommonModuleUtils.setIfExists(
+								() -> jobFamilyDao.getJobFamilyById(empProgression.getJobFamilyId()),
+								employee::setJobFamily);
+						CommonModuleUtils.setIfExists(() -> jobTitleDao.getJobTitleById(empProgression.getJobTitleId()),
+								employee::setJobTitle);
+					}
+				});
+			}
 
 			if (Boolean.TRUE.equals(dto.getIsCurrentEmployment())) {
 				CommonModuleUtils.setIfExists(dto::getEmploymentType, employee::setEmploymentType);
@@ -978,9 +1261,8 @@ public class PeopleServiceImpl implements PeopleService {
 		dto.setEmploymentDetails(mapEmploymentBasicDetails(employee));
 
 		Optional.ofNullable(employee.getEmployeeProgressions())
-			.ifPresent(progressions -> dto.setCareerProgression(progressions.stream()
-				.map(peopleMapper::employeeProgressionToCareerProgressionDto)
-				.collect(Collectors.toList())));
+			.ifPresent(progressions -> dto.setCareerProgression(
+					progressions.stream().map(peopleMapper::employeeProgressionToCareerProgressionDto).toList()));
 
 		dto.setIdentificationAndDiversityDetails(mapIdentificationAndDiversityDetails(employee));
 		dto.setPreviousEmployment(mapPreviousEmploymentDetails(employee));
@@ -1645,6 +1927,10 @@ public class PeopleServiceImpl implements PeopleService {
 		return results;
 	}
 
+	/**
+	 * This method is only available for Pro tenants.
+	 * @param isFromEmployeeBulk is the update from employee bulk upload.
+	 */
 	protected void updateSubscriptionQuantity(long quantity, boolean isIncrement, boolean isFromEmployeeBulk) {
 		log.info("updateSubscriptionQuantity: PRO feature {}, {}", quantity, isIncrement);
 	}
